fixed overflow

--- a/css/variant.css
+++ b/css/variant.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.5;
   color: #212529;
   background-color: #fff;
+  overflow-x: hidden !important;
 }
 
 /* utilities */
@@ -553,7 +554,9 @@ line-height: 22px;
   font-family: 'Lato', sans-serif;
 }
 #footer p{
-  color: #fff;
+  color: #fff; 
+  margin-bottom: 0;
+  padding-bottom: 1rem;
 }
 
 
